# graphix-perceval-backend

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
graphix_perceval_backend/: __init__.py  perceval_backend.py
tests/: __init__.py  conftest.py  test_perceval.py
